external-crates/move/crates/move-unit-test/tests/test_sources/signer_args.snap
---
source: crates/move-unit-test/tests/move_unit_test_testsuite.rs
---
Running Move unit tests
[ FAIL    ] 0x6::M::multi_signer_fail
[ PASS    ] 0x6::M::multi_signer_pass
[ PASS    ] 0x6::M::multi_signer_pass_expected_failure
[ FAIL    ] 0x6::M::single_signer_fail
[ PASS    ] 0x6::M::single_signer_pass
[ PASS    ] 0x6::M::test_correct_signer_arg_addrs

Test failures:

Failures in 0x6::M:

┌── multi_signer_fail ──────
│ Test did not error as expected
└──────────────────


┌── single_signer_fail ──────
│ error[E11001]: test failure
│   ┌─ signer_args.move:8:9
│   │
│ 7 │     fun single_signer_fail(_a: signer) {
│   │         ------------------ In this function in 0x6::M
│ 8 │         abort 0
│   │         ^^^^^^^ Test was not expected to error, but it aborted with code 0 originating in the module 0x6::M rooted here
│ 
│ 
└──────────────────

Test result: FAILED. Total tests: 6; passed: 4; failed: 2
